--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.12",
     "axios": "^1.1.2",
-    "chart.js": "4.0.1",
+    "chart.js": "^3.9.1",
+    "date-fns": "2.29.3",
     "postcss": "8.4.18",
     "react": "^17.0.2",
-    "react-chartjs-2": "5.0.1",
+    "react-chartjs-2": "^4.3.1",
     "react-datepicker": "4.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.37.0",
@@ -26,7 +27,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false  --transformIgnorePatterns \"node_modules/(?!axios)/\"", 
+    "test": "react-scripts test --watchAll=false  --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
